css/style.css
/* ... */
.btnDetailedDrawer {
  width: 150px;
  margin-left: 5px;
  margin-top: 15px;
  height: 30px;
  border: 0;
  background-color: black;
  color: white;
  text-transform: uppercase;
  border-radius: 5px;
  font-size: 0.75em;
  cursor: pointer;
}

#detailedDrawerNavigation {
  width: 350px;
  margin-right: auto;
  margin-left: auto;
  /*top: -165px;*/
  transform: translate3d(0px, 0px, 0px);
}

/* Fallbacks */

.no-csstransforms .top {
  position: static;
}

.no-csstransforms .drawer nav {
  display: none;
}

.no-csstransforms .drawer.active nav {
  display: block;
}

body {
  background: #eee;
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

#contentSwiper li.first {
  background: #577;
}
#contentSwiper li.middle {
  background: #1e8;
}
#contentSwiper li.last {
  background: #e8b;
}

.columns {
  -webkit-columns: 2 300px;
  -moz-columns: 2 300px;
  -o-columns: 2 300px;
  columns: 2 300px;
  -webkit-column-gap: 4em;
  -moz-column-gap: 4em;
  -o-column-gap: 4em;
  column-gap: 4em;
  padding: 10px;
  padding-right: 100px;
  padding-left: 100px;

  /*padding-right: 150px;*/
}

.columns h2, h3 {
  font-size: 1em;
}

.columns img {
  width: 300px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.columns-none {
  -webkit-columns: 2 500px;
  -moz-columns: 2 500px;
  columns: 2 500px;
  padding-left: 20px;
  padding-right: 150px;
  padding-top: 20px;
}

.columns-none h2, h3 {
  font-size: 1em;
}

.img-content {
  margin-left: auto;
  margin-right: auto;
  width: 290px;
  margin-top: 10px;
  margin-bottom: 10px;
  display: block;
}

p {
  margin: 10px;
  font-size: .9em;
}

#map {
    /*z-index: 0;*/
    height: 100%;
    width: 100%;
    position: fixed;
    left: 0px;
    top: 0px;
    transform: translate3d(0, 50px, 0);
    /*transition: transform .35s;*/
}

#map.preview {
  /*top: 160px;*/
 /* transform: translate3d(0, 160px, 0);
  transition: transform .35s;
  height: 100%;*/
}

.expeditionItemContainer {
  float: left;
}

.expeditionItem {
  width: 190px;
  height: 170px;
  border-style: solid;
  border-color: white;
  border-width: 2px;
  background-color: white;
  border-radius: 5px;
  color: black;
  margin-left: 10px;
  margin-top: 10px;
  text-align: center;
  cursor: pointer;
  background-repeat: no-repeat;
  background-position: center;
  -moz-transition: border-color .3s;
  -webkit-transition: border-color .3s;
}

.previewItemActive {
  border-color: black;
  border-width: 2px;
  -moz-transition: border-color .3s;
  -webkit-transition: border-color .3s;;
}

.expeditionPreviewTitle {
  color: black;
  font-size: 0.9em;
  background: -webkit-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: -moz-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: -0-linear-gradient(top, white, rgba(255, 255, 255, 0));
  background: linear-gradient(top, white, rgba(255, 255, 255, 0));
  /*padding-bottom: 10px;*/
}

.expeditionPreviewSummary {
  /*font-family: "Blokk";*/
  font-size: 0.7em;
  cursor: pointer;
  padding: 10px;
}

.readMore {
  text-align: center;
  /* border-radius: 3px; */
  /* padding: 3px; */
  /* position: absolute; */
  /* top: 135px; */
  /* display: inline; */
  /* margin-left: 70px; */
  /* background-color: black; */
  margin-left: auto;
  margin-right: auto;
  /* width: 100px; */
  margin-top: -30px;
}

.readMore > span {
  color: rgba(240, 240, 240, 1);
  /* margin-right: 5px; */
  text-align: center;
  cursor: pointer;
  text-decoration: underline;
  background-color: black;
  padding: 4px 6px;
  /* margin-top: 2px; */
  border-radius: 5px;
  font-size: .8em;
  text-decoration: none;
}

/*.swiper-container .swiper-slide {
  width: 150px;
}*/

.swiper-free-mode > .swiper-wrapper {
  /*width: 500px;*/
  margin: 0px !important;
}

.swiper-wrapper.scroll {
  height: 440px;
  overflow-y: scroll;
  overflow-x: hidden;
}

#expedition-logo {
  /*background-image: url(../images/icons/wikipedialogo.jpg);*/
  height: 40px;
  margin-top: 5px;
  /*background-size: 103px 34px;*/
  /*background-repeat: no-repeat;*/
  /*background-position: 10px 8px;*/
}

.expedition-logo-container {
  float: left;
}

#overview {
  float: left;
  margin-top: 26px;
  display: none;
}

#overview > a {
  color: #999;
  font-size: 0.8em;
  margin-left: 10px;
  text-decoration: none;
}

.expedition-title {
  margin-left: auto;
  margin-right: auto;
  width: 450px;
  text-align: center;
  opacity: 0;
  font-size: 20px;
  margin-top: 10px;
}

.expedition-title.active {
  opacity: 1;
}

.menu-stack {
  float: right;
}

.map-controls {
  position: absolute;
  bottom: 10px;
  width: 110px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

.map-control {
  display: inline-block;
  margin-left: 3px;
  cursor: pointer;
}

.map-control > img {
  width: 30px;
  stroke: white;
}

#mapDrawer {
  display: inline-block;
  cursor: crosshair;
  opacity: 0;
}

#btnMapDrawer {
  position: absolute;
  bottom: -100px;
  opacity: 0;
  display: none;
  /*cursor: not-allowed;*/

}

#btnMapDrawer.active {
  position: static;
  cursor: pointer;
  opacity: 1;
}

.map-list {
  opacity: 0;
  z-index: -1;
  position: fixed;
  bottom: 50px;
  border-style: solid;
  max-height: 200px;
  padding: 3px;
  padding-left: 5px;
  padding-right: 5px;
  background-color: rgba(255, 255, 255, 0.7);
  border-color: rgba(255, 255, 255, .4);
  overflow-y: auto;

}

.map-list.active {
  opacity: 1;
  transition: opacity .3s;
  z-index: 2;
}

.spacer-left {
  position: absolute;
  width: 150px;
  display: inline;
  background-color: white;
  left: 0px;
  /*padding-left: 50px;*/
  top: 0px;
  bottom: 0px;
  box-shadow: 10px 0px 10px 20px white;
  z-index: 2;
}


.spacer-left-content {
  width: 100%;
  text-align: center;
  margin-left: 5px;
  padding: 5px;
}
/* ... */

